unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/litify_time__lit_Time_Rate__c.object-meta.xml
<CustomObject>
    <label>Time Rate</label>
    <nameField>
        <label>Time Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>