unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/lit_Matter_Scope__c.field-meta.xml
<CustomField>
    <fullName>lit_Matter_Scope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Matter Scope</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipName>RateMatters</relationshipName>
    <type>Lookup</type>
</CustomField>