unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Active__c</fullName>
    <formula>AND(
IF(ISBLANK(litify_time__lit_Start_Date__c), TRUE, TODAY() &gt;= litify_time__lit_Start_Date__c), 
IF(ISBLANK(litify_time__lit_End_Date__c), TRUE, TODAY() &lt;=  litify_time__lit_End_Date__c)
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>