unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Billing_Code_Scope__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Code_Scope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Code</label>
    <referenceTo>litify_time__lit_Billing_Code__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>lit_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>