unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Classification_Scope__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Classification_Scope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Classification</label>
    <referenceTo>litify_time__lit_Classification__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>