unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Default__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>