unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>