unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rate_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>