unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>