unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Related_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Related To (Deprecated)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>