unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_User__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_User__c</fullName>
    <formula>Owner:User.FirstName + &#39; &#39; + Owner:User.LastName</formula>
    <label>User</label>
    <type>Text</type>
</CustomField>