unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/fields/litify_time__lit_User_Scope__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_User_Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lit_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>