unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/validationRules/litify_time__Default_Rate_Must_Be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Default_Rate_Must_Be_Active</fullName>
    <active>true</active>
    <description>The default rate must always be active</description>
    <errorConditionFormula>IF(
  OR(
    ISNEW(),
    ISCHANGED(litify_time__lit_Default__c),
    ISCHANGED(litify_time__lit_Start_Date__c),
    ISCHANGED(litify_time__lit_End_Date__c)
  ),
  litify_time__lit_Default__c &amp;&amp; NOT(litify_time__lit_Active__c),
  FALSE
)</errorConditionFormula>
    <errorMessage>The default rate must be active.</errorMessage>
</ValidationRule>