unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/validationRules/litify_time__Prevent_Negative_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Prevent_Negative_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>litify_time__lit_Rate_Amount__c &lt;0</errorConditionFormula>
    <errorMessage>Currency value cannot be negative</errorMessage>
</ValidationRule>