unpackaged/main/default/objects/litify_time__lit_Time_Rate__c/validationRules/litify_time__Start_Date_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Start_Date_before_End_Date</fullName>
    <active>true</active>
    <description>The start date may not be later than the end date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(litify_time__lit_Start_Date__c)),
    NOT(ISBLANK(litify_time__lit_End_Date__c)),
    litify_time__lit_Start_Date__c &gt; litify_time__lit_End_Date__c
)</errorConditionFormula>
    <errorMessage>The start date may not be later than the end date.</errorMessage>
</ValidationRule>